@@ -1,6 +1,9 @@
 Changes in <next version>:
  * Add option to ignore white space following delimiters when importing CSVs
 
+Bug fixes
+ * Fix faulty caching of datasets expressions
+
 Changes in 1.21.1
  * Add swap option on keys, swapping symbol and text
 
